--- a/tanstack_fe/package.json
+++ b/tanstack_fe/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-router": "^1.105.0",
     "@tanstack/start": "^1.105.3",
     "@vitejs/plugin-react": "^4.3.4",
