--- a/tanstack_fe/package.json
+++ b/tanstack_fe/package.json
@@ -33,7 +33,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
     "vinxi": "^0.5.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
