--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,17 @@ venv/
 *.env
 
 # Chroma Storage
-chroma_storage/
+chroma_storage*/
 chroma_db/
+
+# Faiss index
+faiss_index.index
+text_records.json
 
 # Tanstack
 node_modules/
 dist/
+
+# Document folders
+pdfs/
+datasets/
