--- a/tanstack_fe/package.json
+++ b/tanstack_fe/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-router": "^1.105.0",
     "@tanstack/start": "^1.105.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "openai": "^4.85.1",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4",
